tests/baselines/reference/asiPreventsParsingAsInterface02.errors.txt
asiPreventsParsingAsInterface02.ts(1,12): error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
asiPreventsParsingAsInterface02.ts(2,5): error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.


==== asiPreventsParsingAsInterface02.ts (2 errors) ====
    function f(interface: number, I: string) {
               ~~~~~~~~~
!!! error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
        interface   // This should be the identifier 'interface'
        ~~~~~~~~~
!!! error TS1212: Identifier expected. 'interface' is a reserved word in strict mode.
        I           // This should be the identifier 'I'
        {}          // This should be a block body
    }